--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,22 @@
 <nav class="nav">
-  <h1>E-COMM</h1>
-  <div class="search">
+  <h1><a href="/">E-COMM</a></h1>
+  <div *ngIf="menuType==='default'" class="search">
     <input type="text" placeholder="Search for Products">
     <button>Search</button>
   </div>
-  <ul>
-    <li><a routerLink="home" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="seller-auth" routerLinkActive="active">Seller</a></li>
-    <li><a href="#">Login</a></li>
-    <li><a href="#">Cart(0)</a></li>
-  </ul>
+  <div [ngSwitch]="menuType">
+    <ul *ngSwitchCase="'default'">
+      <li><a routerLink="home" routerLinkActive="active">Home</a></li>
+      <li><a routerLink="seller-auth" routerLinkActive="active">Seller</a></li>
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Cart(0)</a></li>
+    </ul>
+
+    <ul *ngSwitchCase="'seller'">
+      <li><a routerLink="seller-home" routerLinkActive="active">List</a></li>
+      <li><a routerLink="seller-add-product" routerLinkActive="active">Add Product</a></li>
+      <li><a routerLinkActive="active" (click)="logout()">Logout</a></li>
+      <li><a href="#">{{sellerName}}</a></li>
+    </ul>
+  </div>
 </nav>
