--- a/src/app/seller-add-product/seller-add-product.component.html
+++ b/src/app/seller-add-product/seller-add-product.component.html
@@ -1,1 +1,13 @@
-<p>seller-add-product works!</p>
+<div class="add-product">
+    <h1>Add New Product</h1>
+    <p class="message-p">{{addProductMessage}}</p>
+    <form #addProduct="ngForm" (ngSubmit)="submit(addProduct.value)" class="common-form">
+        <input class="form-input" type="text" ngModel name="name" placeholder="Product Name">
+        <input class="form-input" type="text" ngModel name="price" placeholder="Product Price">
+        <input class="form-input" type="text" ngModel name="color" placeholder="Product Color">
+        <input class="form-input" type="text" ngModel name="category" placeholder="Product Category">
+        <textarea class="form-input" type="text" ngModel name="description" placeholder="Product Description"></textarea>
+        <input class="form-input" type="text" ngModel name="image" placeholder="Product Image URL">
+        <button class="form-button">Add Product</button>
+    </form>
+</div>
