--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -1,28 +1,31 @@
 <div class="product-list">
-    <h1>All Products</h1>
-    <p class="message-p">{{productMessage}}</p>
-    <table class="">
-        <thead>
-            <tr>
-                <th>Image</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Color</th>
-                <th>Category</th>
-                <th>Description</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of productList">
-                <td><img src="{{item.image}}"></td>
-                <td>{{item.name}}</td>
-                <td>{{item.price}}</td>
-                <td>{{item.color}}</td>
-                <td>{{item.category}}</td>
-                <td>{{item.description}}</td>
-                <td><button (click)="deleteProduct(item.id)">Delete</button></td>
-            </tr>
-        </tbody>
-    </table>
+  <h1>All Products</h1>
+  <p class="message-p">{{ productMessage }}</p>
+  <table class="">
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Color</th>
+        <th>Category</th>
+        <th>Description</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of productList">
+        <td><img src="{{ item.image }}" /></td>
+        <td>{{ item.name }}</td>
+        <td>{{ item.price }}</td>
+        <td>{{ item.color }}</td>
+        <td>{{ item.category }}</td>
+        <td>{{ item.description }}</td>
+        <td>
+          <fa-icon style="margin-left: 10px;" (click)="deleteProduct(item.id)" [icon]="deleteIcon"></fa-icon>
+          <a class="adjust-update-link" routerLink="/seller-update-product/{{item.id}}"> <fa-icon style="color: cadetblue;" [icon]="updateIcon"></fa-icon> </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
