--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -22,7 +22,7 @@
         <td>{{ item.category }}</td>
         <td>{{ item.description }}</td>
         <td>
-          <fa-icon style="margin-left: 10px;" (click)="deleteProduct(item.id)" [icon]="deleteIcon"></fa-icon>
+          <fa-icon style="margin-left: 10px; cursor: pointer;" (click)="deleteProduct(item.id)" [icon]="deleteIcon"></fa-icon>
           <a class="adjust-update-link" routerLink="/seller-update-product/{{item.id}}"> <fa-icon style="color: cadetblue;" [icon]="updateIcon"></fa-icon> </a>
         </td>
       </tr>
