--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,16 @@ body {
     color: green;
 }
 
+.carousel-caption {
+    background-color: #00000082;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    background-color: #00000086;
+    border: 5px;
+    border-radius: 5px;
+    width: 16px;
+}
+
