--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -63,3 +63,23 @@ h1 a {
 ul li a {
     cursor: pointer;
 }
+
+.suggested-result {
+    position: absolute;
+    display: list-item !important;
+    z-index: 10;
+    background-color: #fff;
+    width: 300px;
+    top: 40px;
+    border: 1px solid #ddd;
+}
+
+.suggested-result li {
+    border: 1px solid #fff;
+    padding: 5px;
+}
+
+.suggested-result li a{
+    cursor: pointer;
+    color: cadetblue;
+}
