--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="nav">
   <h1><a href="/">E-COMM</a></h1>
   <div *ngIf="menuType==='default'" class="search">
-    <input type="text" (keyup)="searchProduct($event)" (blur)="hideSearch()" placeholder="Search for Products">
-    <button (click)="onSearch()">Search</button>
+    <input type="text" #searchInput (keyup)="searchProduct($event)" (blur)="hideSearch()" placeholder="Search for Products">
+    <button (click)="onSearch(searchInput.value)">Search</button>
     <ul class="suggested-result" *ngIf="searchResults">
       <li *ngFor="let item of searchResults">
         <a>{{item.name}}</a>
