--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,47 +1,11 @@
-<div class="row search-item">
+<div class="row search-item" *ngFor="let item of searchResults">
     <div class="col-sm-3">
-        <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-14-Pro-Max-9907.jpg" alt="">
+        <img src="{{item.image}}" alt="">
     </div>
     <div class="col-sm-8 details">
-        <h6>Product Name</h6>
-        <p><b>Price</b></p>
-        <p><span>color: Red</span><span>Category: Mobile</span></p>
-        <p>A Product Search UI</p>
-    </div>
-</div>
-
-<div class="row search-item">
-    <div class="col-sm-3">
-        <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-14-Pro-Max-9907.jpg" alt="">
-    </div>
-    <div class="col-sm-8 details">
-        <h6>Product Name</h6>
-        <p><b>Price</b></p>
-        <p><span>color: Red</span><span>Category: Mobile</span></p>
-        <p>A Product Search UI</p>
-    </div>
-</div>
-
-<div class="row search-item">
-    <div class="col-sm-3">
-        <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-14-Pro-Max-9907.jpg" alt="">
-    </div>
-    <div class="col-sm-8 details">
-        <h6>Product Name</h6>
-        <p><b>Price</b></p>
-        <p><span>color: Red</span><span>Category: Mobile</span></p>
-        <p>A Product Search UI</p>
-    </div>
-</div>
-
-<div class="row search-item">
-    <div class="col-sm-3">
-        <img src="https://adminapi.applegadgetsbd.com/storage/media/large/iPhone-14-Pro-Max-9907.jpg" alt="">
-    </div>
-    <div class="col-sm-8 details">
-        <h6>Product Name</h6>
-        <p><b>Price</b></p>
-        <p><span>color: Red</span><span>Category: Mobile</span></p>
-        <p>A Product Search UI</p>
+        <h6>{{item.name}}</h6>
+        <p><b>{{item.price}}</b></p>
+        <p><span>color: {{item.color}}</span><span>Category: {{item.category}}</span></p>
+        <p>{{item.description}}</p>
     </div>
 </div>
